# corral

./: .gitignore  AGENTS.md  CONVENTION.md  Cargo.toml  README.md  SECURITY.md  TODO.md  VISION.md  flake.nix  justfile
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
crates/agentwrap/: Cargo.toml
crates/agentwrap/src/: main.rs  naming.rs
crates/agentwrap/tests/: wrap_roundtrip.rs
crates/board/: Cargo.toml
crates/board/examples/: keycap.rs
crates/board/src/: control.rs  discovery.rs  focus.rs  launch.rs  mailbox.rs  main.rs  model.rs  nav.rs  notify.rs  picker.rs  prompt.rs  router.rs  ui.rs  watch.rs
crates/core/: Cargo.toml
crates/core/src/: approved_commands.rs  click.rs  curation.rs  discovery.rs  engine.rs  focus.rs  history.rs  launch.rs  lib.rs  menu.rs  model.rs  nav.rs  palette.rs  paths.rs  picker.rs  placement.rs  prompt.rs  transition.rs  watch.rs
crates/corral/: Cargo.toml
crates/corral/src/: discovery.rs  main.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: control.rs  curator.rs  icon.rs  lib.rs  mailbox.rs  main.rs  notify.rs  registrations.rs  router.rs  tray.rs
crates/daemon/tests/: live_daemon.rs  security.rs
crates/gui/: Cargo.toml
crates/gui/src/: dashboard.rs  main.rs  theme.rs
docs/: nixos-changes-handoff.md  security-test-matrix.md  setup-system-nix.md
docs/research/: 2026-07-12-agent-status-detection-survey.md
docs/superpowers/plans/: 2026-07-12-corral-board-selection.md  2026-07-13-picker-and-card-ui-refresh.md  2026-07-14-harness-override-via-tool-call.md  2026-07-14-label-override-via-tool-call.md  2026-07-14-quine-corral-gui-launch.md  2026-07-15-corral-cursor-adapter.md  2026-07-15-hidden-agents.md  2026-07-17-resume-template.md  2026-07-18-model-exposure.md  2026-07-23-context-size-footer.md  2026-07-23-history-export-plan.md
docs/superpowers/specs/: 2026-07-11-corral-attention-board-design.md  2026-07-12-corral-board-selection-and-footer-design.md  2026-07-13-claude-code-adapter-design.md  2026-07-13-picker-and-card-ui-refresh-design.md  2026-07-13-registry-carried-launch-commands.md  2026-07-13-summon-launcher-model-design.md  2026-07-14-iced-gui-and-base16-theming-design.md  2026-07-15-card-move-agent-state-design.md  2026-07-15-corral-cursor-adapter-design.md  2026-07-15-cross-box-tasking-design.md  2026-07-15-hidden-agents-design.md  2026-07-15-mouse-interaction-overhaul-design.md  2026-07-16-corral-stop-agent-design.md  2026-07-16-security-hardening-design.md  2026-07-18-vm-e2e-smoke-test-design.md  2026-07-23-context-size-footer-design.md  2026-07-23-history-export-design.md
extensions/: corral-announce.ts  corral-opencode.ts  corral-pi.ts
extensions/corral-claude/: README.md  hook.ts  settings.json  sidecar.ts
extensions/corral-claude/.claude-plugin/: plugin.json
extensions/corral-claude/hooks/: hooks.json
extensions/corral-cursor/: README.md  extension.js  hooks.template.json  lib.js  lib.test.js  package.json  state-hook.js
nix/: hm-module.nix
nix/tests/: acp.py  base.nix  default.nix  pkgs.nix  prelude.py  stub-llm.py
nix/tests/modules/: claude.nix  cursor.nix
nix/tests/npm/: README.md
nix/tests/npm/pi/: npm-shrinkwrap.json  package-lock.json  package.json
nix/tests/pi-ext/: question.ts  stub-provider.ts
nix/tests/profiles/: agent.jsonc
nix/tests/scenarios/: claude.py  cursor.py  opencode.py  pi.py
