[package]
name = "agentwrap"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Wrap an ACP-mode coding agent and expose its stdio on a discoverable unix socket"

[dependencies]
# Signal handling so we can unlink the socket and stop the child on SIGINT/SIGTERM.
signal-hook = "0.3"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
