# The `corral` binary lives here (crate dir is `board`, the attention-board
# implementation; the product/command name stays `corral`).
[package]
name = "corral"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Attention board for locally running ACP coding agents (pi)"

[[bin]]
name = "corral"
path = "src/main.rs"

[dependencies]
serde_json = "1"
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]
tempfile = "3"
