# The `corral` binary lives here (crate dir is `board`, the attention-board
# implementation; the product/command name stays `corral`).
[package]
name = "corral"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Attention board for locally running ACP coding agents (pi)"

[[bin]]
name = "corral"
path = "src/main.rs"

[dependencies]
corral-core = { path = "../core" }
serde_json = "1"
ratatui = "0.29"
crossterm = "0.28"
# Emoji/CJK render wider than one cell; count display width so the hidden
# icon does not throw off the activity-text truncation on the card's second row.
unicode-width = "0.2"

[dev-dependencies]
tempfile = "3"
