# Shared code for the `corral` board and the `corrald` daemon: registry
# discovery, prompt delivery over a live socket, and the agent-launch seam.
# Deliberately UI-free (no ratatui, no ksni) so each binary keeps its own deps.
[package]
name = "corral-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared registry/discovery/launch/prompt code for corral and corrald"

[dependencies]
serde_json = "1"
# X11 window focus via EWMH (pure-Rust XCB, links libxcb which is always
# present in an X11 session; no libX11).
x11rb = "0.13"

[dev-dependencies]
tempfile = "3"
