# Shared code for the `corral` board and the `corrald` daemon: registry
# discovery, prompt delivery over a live socket, and the agent-launch seam.
# Deliberately UI-free (no ratatui, no ksni) so each binary keeps its own deps.
[package]
name = "corral-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared registry/discovery/launch/prompt code for corral and corrald"

[dependencies]
serde_json = "1"
# Unix fd handling: a non-blocking open so a hostile FIFO target cannot hang a
# record/submission read (security design C1/H1).
libc = "0.2"
# Event-driven viewer refresh: watch the vetted state/registry dir so a viewer
# reacts to corrald's writes without a second poll stage (fd forced
# non-blocking, so it never blocks the UI).
inotify = "0.9"
# X11 window focus via EWMH (pure-Rust XCB, links libxcb which is always
# present in an X11 session; no libX11).
x11rb = "0.13"

[dev-dependencies]
tempfile = "3"
