# The `corral-gui` binary: a desktop (iced) presentation shell over the same
# registry the TUI board reads. A second, parallel viewer — the ratatui
# `corral` stays as the zero-friction terminal path. iced renders text via
# cosmic-text (crisp, shaped) and is fully self-themed. Links the ubiquitous
# graphics libs (vulkan-loader/libGL/wayland/X11/xkbcommon).
[package]
name = "corral-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Desktop (iced) attention board for corral"

[[bin]]
name = "corral-gui"
path = "src/main.rs"

[dependencies]
corral-core = { path = "../core" }
iced = "0.13"
